test/libsolidity/syntaxTests/abstract/library.sol
abstract library A { }
// ----
// TypeError: (0-22): Only contracts can be abstract.
